examples/test/testpolicy2574.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2574
  namespace: namespace155
spec:
  podSelector:
    matchLabels:
      key11: value39
      key35: value24
      key21: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value32
          key32: value11
          key15: value36
      podSelector:
        matchLabels:
          key27: value14
